translation-tool/inputs/source_meta/objects/Submit_Article__c.object
<CustomObject>
    <fields>
        <fullName>Article_Status__c</fullName>
        <description>Determine&apos;s whether the request is about a new or existing article.</description>
        <label>Article Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Article</fullName>
                </value>
                <value>
                    <fullName>Existing Article</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that the record is currently assigned to.</description>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Submit_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>This distinguishes between whether the Enterprise Team or Consumer team are responsible for the record.</description>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise Requested</fullName>
                </value>
                <value>
                    <fullName>Enterprise Assigned</fullName>
                </value>
                <value>
                    <fullName>Enterprise Update in Progress</fullName>
                </value>
                <value>
                    <fullName>Enterprise Pending Rewrite</fullName>
                </value>
                <value>
                    <fullName>Enterprise Pending Review</fullName>
                </value>
                <value>
                    <fullName>Enterprise Pending Input</fullName>
                </value>
                <value>
                    <fullName>Enterprise On Hold</fullName>
                </value>
                <value>
                    <fullName>Enterprise Approved</fullName>
                </value>
                <value>
                    <fullName>Enterprise Completed</fullName>
                </value>
                <value>
                    <fullName>Enterprise Rejected</fullName>
                </value>
                <value>
                    <fullName>Enterprise Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Submit Article</label>
    <listViews>
        <fullName>Enterprise_KB_Team_Submit_Article</fullName>
        <filterScope>Queue</filterScope>
        <label>Enterprise KB Team</label>
        <queue>Enterprise_KB_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Submit Articles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>